--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 streamlit
 pandas
 numpy
-scikit-learn
-imblearn
 matplotlib
 seaborn
 nltk
 openpyxl
+scikit-learn==1.3.2
+imbalanced-learn==0.11.0
